# DataScience_Numpy

./: .gitignore  README.md  pyproject.toml
notebooks/: image_manipulation.ipynb
scripts/: image_functions.py  numpy_image_manipulation.py
